Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanUndefined.quorum
class Main
    action Main
        boolean v = undefined
        Test(v)
    end

    action Test(boolean var)
    end
end
